# open_gl_learning_projects

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
